Fix figcaption text overflow

--- a/source/css/_common/scaffolding/highlight/highlight.styl
+++ b/source/css/_common/scaffolding/highlight/highlight.styl
@@ -65,6 +65,10 @@ code {
         border-bottom-color: var(--highlight-foreground);
       }
     }
+
+    a, span {
+      min-width: 0;
+    }
   }
 
   .gutter {
